cluster/prod-cluster/eodt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eodt-api
  namespace: eodt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eodt-api
  template:
    metadata:
      labels:
        app: eodt-api
    spec:
      containers:
        - name: fastapi
          image: ghcr.io/arthurtolley/eodt:0.0.2 # {"$imagepolicy": "flux-system:eodt"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
