cluster/prod-cluster/eodt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eodt-api-service
  namespace: eodt
spec:
  type: ClusterIP
  selector:
    app: eodt-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
