cluster/prod-cluster/eodt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eodt-api-ingress
  namespace: eodt
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/eodt/openapi.json$ /openapi.json break;
      rewrite ^/eodt/docs/(.*)$ /docs/$1 break;
spec:
  ingressClassName: nginx
  rules:
    - host: icg-cpd-cluster.port.ac.uk
      http:
        paths:
          - path: /eodt(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: eodt-api-service
                port:
                  number: 80
